--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,8 +1,8 @@
 .head-text{
     color: white;
     font-family: Marvel;
-    font-size: 3rem;
+    font-size: 50px;
     font-weight: 700;
     padding-top: 1rem;
+    padding-bottom: 1rem;
 }
-
